--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -130,6 +130,7 @@
 		"iSee": "我知道了",
 		"shuliang":"数量",
 	    "pinming":"品名",
+	    "netxstep":"下一步",
 	    "danjia":"单价"
 	},
 	"page_indexs_dairuku": {
