--- a/web/lang/10001/English.json
+++ b/web/lang/10001/English.json
@@ -124,6 +124,7 @@
 "please_enter_note": "Please enter remarks ",
 "viewed_and_agreed": "Viewed and agreed",
 "submit_forecast": "Submit forecast",
+"netxstep":"netx step",
 "iSee": "I see"
 },
 "page_indexs_dairuku": {
