--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -130,6 +130,7 @@
 		"iSee": "我知道了",
 		"shuliang":"數量",
 	    "pinming":"品名",
+	    "netxstep":"下一步",
 	    "danjia":"單價"
 	},
 	"page_indexs_dairuku": {
