--- a/web/lang/10001/English.json
+++ b/web/lang/10001/English.json
@@ -4,6 +4,7 @@
 "search": "Search",
 "freight": "Freight",
 "mine": "Mine",
+"shop": "shop",
 "query": "Query",
 "grouping":"Grouping",
 "packageForecast": "Package Forecast",
@@ -1400,39 +1401,119 @@
 "Warehouse_door": "warehouse_door ",
 "save": "Save"
 },
-"page_worker_edit": {
-"Edit_permission": "edit permission",
-"name": "name",
-"Placeholder1" : "please fill in the employee name",
-"phone": "Mobile phone number ",
-"Placeholder2" : "please enter the phone number,",
-"Account_status": "Account status",
-"Message_reception":" indicates the reception of a message",
-"hint": "Permission Settings (optional) ",
-"save": "Save"
-},
-"page_my_worker": {
-"phone": "Mobile phone number ",
-"bind_phone": "unbound phone number ",
-"changkuquanxia": "Warehouse Permission ",
-"edit": "edit permissions ",
-"hint": "No employee currently, go to the management background to add!" ,
-"add": "to add"
-},
-"page_center": {
-"invite_now": "Invite now",
-"Income_the_day": "today's income ",
-"Earnings_week": "Earnings of the week",
-"Monthly_earnings": "Monthly_earnings",
-"Cumulative_income": "cumulative income",
-"Withdrawable" : "withdrawal",
-"Withdrawal_audit": "Withdrawal audit"
-},
-"page_template": {
-    "home": "home",
-    "query": "query",
-    "grouping":"grouping",
-    "my": "My"
-}
+    "page_worker_edit": {
+    "Edit_permission": "edit permission",
+    "name": "name",
+    "Placeholder1" : "please fill in the employee name",
+    "phone": "Mobile phone number ",
+    "Placeholder2" : "please enter the phone number,",
+    "Account_status": "Account status",
+    "Message_reception":" indicates the reception of a message",
+    "hint": "Permission Settings (optional) ",
+    "save": "Save"
+    },
+    "page_my_worker": {
+    "phone": "Mobile phone number ",
+    "bind_phone": "unbound phone number ",
+    "changkuquanxia": "Warehouse Permission ",
+    "edit": "edit permissions ",
+    "hint": "No employee currently, go to the management background to add!" ,
+    "add": "to add"
+    },
+    "page_center": {
+    "invite_now": "Invite now",
+    "Income_the_day": "today's income ",
+    "Earnings_week": "Earnings of the week",
+    "Monthly_earnings": "Monthly_earnings",
+    "Cumulative_income": "cumulative income",
+    "Withdrawable" : "withdrawal",
+    "Withdrawal_audit": "Withdrawal audit"
+    },
+    "page_template": {
+        "home": "home",
+        "query": "query",
+        "grouping":"grouping",
+        "my": "My"
+    },
+    "checkout": {  
+        "title": "Buy Now",  
+        "genghuan": "Replace",  
+        "dizhi": "Please select delivery address",  
+        "xaunze": "Select Now",  
+        "zitidian": "Please select self-pickup location",  
+        "lianxiren": "Contact Person",  
+        "lianxirentxt": "Please fill in contact person name",  
+        "lianxidianhua": "Contact Phone",  
+        "lianxidianhuatxt": "Please fill in contact phone number",  
+        "jiage": "Price",  
+        "yunfei": "Shipping Fee",  
+        "heji": "Items, Total",  
+        "gong": "Total",  
+        "dingdan": "Order Total Amount",  
+        "fuwufei": "Service Fee",  
+        "zhifu": "Payment Method",  
+        "xuantian": "Optional: Buyer's Message (within 50 characters)",  
+        "shifukuan": "Actual Payment",  
+        "tijiao": "Submit Order",  
+        "goumaichenggong": "Purchase Successful",  
+        "chenggong": "Success",  
+        "weimendian": "Please select self-pickup store",  
+        "weilianxiren": "Please fill in self-pickup contact person",  
+        "weilianxidianhua": "Please fill in self-pickup contact phone number",  
+        "weilianxidianhuas": "Please enter a valid contact phone number",  
+        "guanbi": "Close",  
+        "shuoming": "Note",  
+        "zhekou": "Member Discount Price"  
+    },  
+    "pintuandingdan": {  
+        "title": "Group Buying Order",  
+        "fqzhifu": "Payment Method",  
+        "fqyouhui": "Coupon",  
+        "fqkeyong": "Coupon Available",  
+        "fqshifukuan": "Actual Payment",  
+        "fqtijiao": "Submit Order",  
+        "fqxuanzeyouhuiq": "Select Coupon",  
+        "fqman": "Satisfy",  
+        "fqyuankeyong": "Available Amount",  
+        "fqzhe": "Discount",  
+        "fqyouxiaoqi": "Expiration Date",  
+        "fqbushiyong": "Do Not Use Coupon",  
+        "fqzanwu": "No Coupon Available",  
+        "fqliuyan": "Optional: Buyer's Message (within 50 characters)"  
+    },  
+    "gouwuches": {  
+        "title": "Shopping Cart",  
+        "bianji": "Edit",  
+        "wancheng": "Complete",  
+        "quanxuan": "Select All",  
+        "heji": "Total",  
+        "qujiesuan": "Proceed to Checkout",  
+        "shanchu": "Delete",  
+        "qin": "Dear, your shopping cart is empty.",  
+        "qugouwu": "Go Shopping",  
+        "weishangpin": "You haven't selected any items yet.",  
+        "tishi": "Note",  
+        "weiyichu": "Are you sure you want to remove the selected items?"  
+    },  
+     "shangpins": {  
+        "title": "Product Details",  
+        "zhekou": "Member Discount Price",  
+        "fenxiang": "Share",  
+        "xiaoliang": "Sales",  
+        "xuanze": "Select",  
+        "kucun": "Stock",  
+        "goumaishul": "Quantity",  
+        "jiaru": "Add to Cart",  
+        "lijigoumai": "Buy Now",  
+        "zanwu": "Out of Stock",  
+        "pinjia": "Reviews",  
+        "tiao": "Entry",  
+        "chakan": "View More",  
+        "miaoshu": "Product Description",  
+        "shuju": "Sorry, no data available here yet.",  
+        "baocun": "Save Image",  
+        "denglu": "Please log in first",  
+        "weigoumai": "Not available for purchase"  
+    }  
 }
 }
