--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -5,6 +5,7 @@
 		"freight": "运费",
 		"mine": "我的",
 		"query": "查询",
+		"shop":"商城",
 		"grouping": "拼团",
 		"packageForecast": "包裹预报",
 		"forecast_the_package_in_advance": "提前预报包裹",
@@ -102,6 +103,12 @@
 		"wechat_name": "请授权微信昵称",
 		"binding_mobile_phone_number_hint_text": "为了在必要时能联系到您，请填写有效手机号",
 		"please_enter_phone_number": "请输入手机号",
+		"shoporder":"商城订单",
+		"quanbu":"全部订单",
+		"daifahuo":"待发货",
+		"zaituzhong":"待收货",
+		"yiwancheng":"待评价",
+		"daifukuan":"待付款",
 		"save_phone_number": "保存手机号"
 	},
 	"page_baoguoyg": {
@@ -129,9 +136,19 @@
 		"submit_forecast": "提交预报",
 		"iSee": "我知道了",
 		"shuliang":"数量",
-	    "pinming":"品名",
+	    "pinming":"产品中文名",
 	    "netxstep":"下一步",
-	    "danjia":"单价"
+	    "danjia":"单价",
+	    "goods_name_en":"产品英文名",
+	    "goods_name_jp":"产品日文名",
+	    "brand":"品牌名称",
+	    "spec":"规格",
+	    "gross_weight":"毛重",
+	    "net_weight":"净重",
+	    "depth":"长度",
+	    "width":"宽度",
+	    "height":"高度",
+	    "barcode":"条码"
 	},
 	"page_indexs_dairuku": {
 		"my_package": "我的包裹",
@@ -1137,6 +1154,7 @@
 		"Logistics_company": "物流公司：",
 		"Logistics_tracking_number": "物流单号：",
 		"Commodity_list": "商品列表",
+		"category": "商品分类",
 		"order_number": "订单号：",
 		"Discount_members": "会员折扣价：",
 		"Applied_after_sale": "已申请售后",
@@ -1164,7 +1182,7 @@
 		"To_be_evaluated": "待评价",
 		"Commodity_list": "商品列表",
 		"Order_number": "订单号：",
-		"pack_num": "共{ num }件",
+		"pack_num": "件数",
 		"total": "合计：",
 		"cancel": "取消",
 		"Apply_cancellation": "申请取消",
@@ -1484,5 +1502,98 @@
 	"wechatplaceholder":"请输入微信号",
 	"identification_cardplaceholder":"请输入内容",
 	"birthday":"生日"
-  }
+  },
+  "checkout":{
+      "title":"立即购买",
+      "genghuan":"更换",
+      "dizhi":"请选择配送地址",
+      "xaunze":"去选择",
+      "zitidian":"请选择自提点",
+      "lianxiren":"联系人",
+      "lianxirentxt":"请填写联系人姓名",
+      "lianxidianhua":"联系电话",
+      "lianxidianhuatxt":"请填写联系电话",
+      "jiage":"价格",
+      "yunfei":"运费",
+      "heji":"件商品，合计",
+      "gong":"共",
+      "dingdan":"订单总金额",
+      "fuwufei":"服务费",
+      "zhifu":"支付方式",
+      "xuantian":"选填：买家留言（50字以内）",
+      "shifukuan":"实付款",
+      "tijiao":"提交订单",
+      "goumaichenggong":"购买成功",
+      "chenggong":"成功",
+      "weimendian":"请选择自提的门店",
+      "weilianxiren":"请填写自提联系人",
+      "weilianxidianhua":"请填写自提联系电话",
+      "weilianxidianhuas":"请输入正确的联系电话",
+      "guanbi":"关闭",
+      "shuoming":"说明",
+      "zhekou":"会员折扣价"
+    },
+    "pintuandingdan":{
+        "title":"拼团订单",
+        "fqzhifu":"支付方式",
+        "fqyouhui":"优惠券",
+        "fqkeyong":"张优惠券可用",
+        "fqshifukuan":"实付款",
+        "fqtijiao":"提交订单",
+        "fqxuanzeyouhuiq":"选择优惠券",
+    	"fqman":"满",
+    	"fqyuankeyong":"元可用",
+    	"fqzhe":"折",
+    	"fqyouxaioqi":"有效期",
+    	"fqbushiyong":"不使用优惠券",
+    	"fqzanwu":"无优惠券可用",
+    	"pjquanbu":"全部",
+	    "pjhao":"好评",
+	    "pjzhong":"中评",
+	    "pjcha":"差评",
+	    "pjjl":"亲，暂时没有记录哦",
+	    "sctp":"上传图片",
+	    "qrtj":"确认提交",
+	    "fqliuyan":"选填：买家留言（50字以内）"
+    },
+    "gouwuches":{
+        "title":"购物车",
+    	"bianji":"编辑",
+    	"wancheng":"完成",
+    	"quanxuan":"全选",
+    	"heji":"合计",
+    	"qujiesuan":"去结算",
+    	"shanchu":"删除",
+    	"qin":"亲，购物车还没有商品哦",
+    	"qugouwu":"去购物",
+    	"weishangpin":"您还没有选择商品",
+    	"tishi":"提示",
+    	"weiyichu":"您确定要移除选择的商品吗?"
+    },
+    "shangpins":{
+    	"title":"商品详情",
+    	"zhekou":"会员折扣价",
+    	"fenxiang":"分享",
+    	"xiaoliang":"销量",
+    	"xuanze":"选择",
+    	"kucun":"库存",
+    	"goumaishul":"购买数量",
+    	"jiaru":"加入购物车",
+    	"lijigoumai":"立即购买",
+    	"zanwu":"暂无现货",
+    	"pinjia":"评价",
+    	"tiao":"条",
+    	"chakan":"查看更多",
+    	"miaoshu":"商品描述",
+    	"shuju":"亲,此处暂无详情数据",
+    	"baocun":"保存图片",
+    	"denglu":"请先去登录",
+    	"weigoumai":"请输入购买数量",
+    	"weigoumais":"购买数量不能为0",
+    	"baocuncg":"保存成功",
+    	"sousuo":"搜索",
+	    "zuijin":"最近搜索",
+	    "sousuotxt":"请输入您搜索的商品",
+    	"yunxu":"请允许访问相册后重试"
+    }
 }
