--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -5,6 +5,7 @@
 		"freight": "運費",
 		"mine": "我的",
 		"query": "查詢",
+		"shop":"商城",
 		"grouping": "拼團",
 		"packageForecast": "包裹預報",
 		"forecast_the_package_in_advance": "提前預報包裹",
@@ -1482,5 +1483,88 @@
 	"wechatplaceholder":"請輸入微信號",
 	"identification_cardplaceholder":"請輸入内容",
 	"birthday":"生日"
-  }
+  },
+  "checkout":{
+      "title": "立即購買",  
+      "genghuan": "更换",  
+      "dizhi": "請選擇配送地址",  
+      "xaunze": "去選擇",  
+      "zitidian": "請選擇自提點",  
+      "lianxiren": "聯繫人",  
+      "lianxirentxt": "請填寫聯繫人姓名",  
+      "lianxidianhua": "聯繫電話",  
+      "lianxidianhuatxt": "請填寫聯繫電話",  
+      "jiage": "價格",  
+      "yunfei": "運費",  
+      "heji": "件商品，合計",  
+      "gong": "共",  
+      "dingdan": "訂單總金額",  
+      "fuwufei": "服務費",  
+      "zhifu": "支付方式",  
+      "xuantian": "選填：買家留言（50字以內）",  
+      "shifukuan": "實付款",  
+      "tijiao": "提交訂單",  
+      "goumaichenggong": "購買成功",  
+      "chenggong": "成功",  
+      "weimendian": "請選擇自提的門店",  
+      "weilianxiren": "請填寫自提聯繫人",  
+      "weilianxidianhua": "請填寫自提聯繫電話",  
+      "weilianxidianhuas": "請輸入正確的聯繫電話",  
+      "guanbi": "關閉",  
+      "shuoming": "說明",  
+      "zhekou": "會員折扣價"  
+    },
+    "pintuandingdan":{
+      "title": "拼團訂單",  
+      "fqzhifu": "支付方式",  
+      "fqyouhui": "優惠券",  
+      "fqkeyong": "張優惠券可用",  
+      "fqshifukuan": "實付款",  
+      "fqtijiao": "提交訂單",  
+      "fqxuanzeyouhuiq": "選擇優惠券",  
+      "fqman": "滿",  
+      "fqyuankeyong": "元可用",  
+      "fqzhe": "折",  
+      "fqyouxiaoqi": "有效期",  
+      "fqbushiyong": "不使用優惠券",  
+      "fqzanwu": "無優惠券可用",  
+      "fqliuyan": "選填：買家留言（50字以內）" 
+    },
+    "gouwuches":{
+        "title":"購物車",
+    	"bianji":"編輯",
+    	"wancheng":"完成",
+    	"quanxuan":"全選",
+    	"heji":"合計",
+    	"qujiesuan":"去結算",
+    	"shanchu":"刪除",
+    	"qin":"親，購物車還沒有商品哦",
+    	"qugouwu":"去購物",
+    	"weishangpin":"您還沒有選擇商品",
+    	"tishi":"提示",
+    	"weiyichu":"您確定要移除選擇的商品嗎？"
+    },
+    "shangpins":{
+    	"title":"商品詳情",
+    	"zhekou":"會員折扣價",
+    	"fenxiang":"分享",
+    	"xiaoliang":"銷量",
+    	"xuanze":"選擇",
+    	"kucun":"庫存",
+    	"goumaishul":"購買數量",
+    	"jiaru":"加入購物車",
+    	"lijigoumai":"立即購買",
+    	"zanwu":"暫無現貨",
+    	"pinjia":"評價",
+    	"tiao":"條",
+    	"chakan":"查看更多",
+    	"miaoshu":"商品描述",
+    	"shuju":"亲,此处暂无详情数据",
+    	"baocun":"保存圖片",
+    	"denglu":"請先去登錄",
+    	"weigoumai":"請輸入購買數量",
+    	"weigoumais":"購買數量不能為0",
+    	"baocuncg":"保存成功",
+    	"yunxu":"請允許訪問相冊後重試"
+    }
 }
