--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -795,7 +795,8 @@
 		"parcel_no": "包裹单号[快递单号]",
 		"logistics_transportation": "物流运输",
 		"other": "其他",
-		"commodity_category": "商品品类",
+		"commodity_category": "包裹内容",
+		"chakanmingxi": "查看明细",
 		"long_w_h_w": "长/宽/高/重量",
 		"long_w_h_v": "长/宽/高/体积重",
 		"storage_time": "入库时间",
@@ -809,6 +810,7 @@
 		"chargeable_weight": "计费重量",
 		"shipping_information": "寄运信息",
 		"Base_freight": "基础运费",
+		"insure_free": "保险运费",
 		"packaging_service": "包装服务",
 		"Other_expenses": "其他费用",
 		"Select_coupon": "选择优惠券",
@@ -959,6 +961,7 @@
 	},
 	"page_my_querendb": {
 		"Confirm_packing": "确认打包",
+		"yugufree": "预估运费",
 		"home_delivery": "送货上门",
 		"selective_pickup": "选择自提",
 		"add_shipping_address": "添加收货地址",
