修改调整仓管端权限问题

--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -23,7 +23,7 @@
     },
 	"page_index": {
 		"bestRoute": "最佳路線",
-		"allRoute":"所有路綫",
+		"allRoute":"所有路線",
 		"aging": "時效",
 		"day": "天",
 		"tariff": "關稅",
@@ -36,9 +36,9 @@
 		"callHotline": "撥打熱線",
 		"onlineService": "在線客服",
 		"wechatNumber": "微信號",
-		"capyWechat": "復制微信",
+		"capyWechat": "復製微信",
 		"mailboxNumber": "郵箱號",
-		"copyMailbox": "復制郵箱",
+		"copyMailbox": "復製郵箱",
 		"ISee": "我知道了"
 	},
 	"page_chaxun": {
@@ -101,13 +101,19 @@
 		"about_us": "關於我們",
 		"exitapp":"退出登錄",
 		"version_number": "版本號",
-		"bingPhoneNumHinttext": "為了您能夠更好的體驗本系統，需要綁定妳的手機號",
-		"binding_mobile_phone_number": "壹鍵綁定手機號",
+		"bingPhoneNumHinttext": "為了您能夠更好的體驗本系統，需要綁定你的手機號",
+		"binding_mobile_phone_number": "一鍵綁定手機號",
 		"wechat_name_authorized": "為了更好地為您服務，請授權微信昵稱",
-		"bind_name": "壹鍵綁定昵稱",
+		"bind_name": "一鍵綁定昵稱",
 		"wechat_name": "請授權微信昵稱",
 		"binding_mobile_phone_number_hint_text": "為了在必要時能聯系到您，請填寫有效手機號",
 		"please_enter_phone_number": "請輸入手機號",
+		"shoporder":"商城訂單",
+		"quanbu":"全部訂單",
+		"daifahuo":"待發貨",
+		"zaituzhong":"待收貨",
+		"yiwancheng":"待評價",
+		"daifukuan":"待付款",
 		"save_phone_number": "保存手機號"
 	},
 	"page_baoguoyg": {
@@ -124,32 +130,42 @@
 		"item_value": "物品價值",
 		"waitreceivedmoney": "代收款",
 	    "waitreceivedmoney_placeholder": "請輸入代收款",
-	    "goodsinformation": "物品信息",
+		"goodsinformation": "物品信息",
 		"please_enter_item_value": "請輸入物品價值",
 		"commodity_remarks": "商品備註",
 		"photo_upload": "拍照上傳",
 		"multiple_tracking_numbers_point": "多個快遞單號(在上面輸入後點+號)",
-		"multiple_tracking_numbers_hint_text": "註意:兩個快遞單號中間壹定要用逗號，隔開，如不會操作,請用上面[快遞單號]，輸入壹個點壹下+號",
+		"multiple_tracking_numbers_hint_text": "註意:兩個快遞單號中間一定要用逗號，隔開，如不會操作,請用上面[快遞單號]，輸入一個點一下+號",
 		"please_enter_note": "請輸入備註",
 		"viewed_and_agreed": "已查看並同意",
 		"submit_forecast": "提交預報",
 		"iSee": "我知道了",
 		"shuliang":"數量",
-	    "pinming":"品名",
+	    "pinming":"產品中文名",
 	    "netxstep":"下一步",
-	    "danjia":"單價"
+	    "danjia":"單價",
+	    "goods_name_en":"產品英文名",
+	    "goods_name_jp":"產品日文名",
+	    "brand":"品牌名稱",
+	    "spec":"規格",
+	    "gross_weight":"毛重",
+	    "net_weight":"凈重",
+	    "depth":"長度",
+	    "width":"寬度",
+	    "height":"高度",
+	    "barcode":"條碼"
 	},
 	"page_indexs_dairuku": {
 		"my_package": "我的包裹",
 		"not_in_storage": "未入庫",
 		"stocked": "已入庫",
-		"problem_piece": "問題件",
 		"yessend": "已發貨",
 		"order_sn":"所屬訂單",
+		"problem_piece": "問題件",
 		"please_enter_the_parcel_number": "請輸入包裹單號",
 		"check_the_details": "查看詳情",
 		"parcel_no": "包裹單號",
-		"copy_tracking_number": "復制單號",
+		"copy_tracking_number": "復製單號",
 		"shipping_country": "寄送國家",
 		"unknown": "未知",
 		"usermark":"嘜頭",
@@ -201,7 +217,7 @@
 		"payment_amount": "支付金額",
 		"cancel_order": "取消訂單",
 		"check_details": "查看詳情",
-		"copy_tracking_number": "復制單號",
+		"copy_tracking_number": "復製單號",
 		"to_pay": "去支付",
 		"to_comment": "去評論",
 		"confirm_receipt": "確認簽收",
@@ -218,13 +234,13 @@
 	"page_cangkudizhi": {
 		"warehouse_address": "倉庫地址",
 		"recipient": "收件人",
-		"copy": "復制",
+		"copy": "復製",
 		"phone_number": "手機號碼",
-		"one_click_copy": "壹鍵復制",
+		"one_click_copy": "一鍵復製",
 		"pecipient_address": "收件地址",
 		"post_code": "郵編",
 		"operation_guide": "操作指引",
-		"step_one": "第壹步：寄貨",
+		"step_one": "第一步：寄貨",
 		"step_one_text": "寄貨到跨境集運匯集運倉；",
 		"step_two": "第二步：添加包裹",
 		"step_two_text": "當您國內快遞寄出後，添加國內快遞單號到您的包裹中，可實時跟進您的包裹進程；",
@@ -267,7 +283,7 @@
 		"account": "賬號",
 		"account_holder": "開戶人",
 		"account_opening_branch": "開戶支行",
-		"one_click_copy": "壹鍵復制",
+		"one_click_copy": "一鍵復製",
 		"upload_certificate": "上傳憑證"
 	},
 	"page_my_pinzhenglist": {
@@ -702,17 +718,17 @@
 		"consolidation_warehouse": "集運倉庫",
 		"goods_info": "商品信息",
 		"commodity_category": "商品品類",
-		"commodity_value": "商品縂價值",
-		"commodity_remarks": "内品描述",
+		"commodity_value": "商品總價值",
+		"commodity_remarks": "內品描述",
 		"edit_package": "編輯包裹",
-		"commodity_remarkstips":"請輸入物品信息，格式參考例如：襯衣*2，褲子*2，鞋子*1"
+		"commodity_remarkstips":"請輸入物品信息，格式參考例如: 襯衣*2，褲子*2，鞋子*1"
 	},
 	"page_dairuku_xq": {
 		"package_details": "包裹詳情",
 		"package_information": "包裹信息",
 		"courier_name": "快遞名稱",
 		"parcel_no": "包裹單號",
-		"copy_tracking_number": "復制單號",
+		"copy_tracking_number": "復製單號",
 		"sending_country": "寄送國家",
 		"consolidation_warehouse": "集運倉庫",
 		"goods_info": "商品信息",
@@ -743,9 +759,9 @@
 		"freight": "運費",
 		"total_cost": "合計費用",
 		"lineCharacteristics": "線路特點",
-		"article_restriction": "物品限制",
-		"weight_limit": "重量限制",
-		"volume_limitation": "體積限制",
+		"article_restriction": "物品限製",
+		"weight_limit": "重量限製",
+		"volume_limitation": "體積限製",
 		"more_rules": "更多規則"
 	},
 	"page_luxianxinxi": {
@@ -760,9 +776,9 @@
 		"head_weight": "首重：",
 		"reweight": "續重：",
 		"lineCharacteristics": "線路特點",
-		"article_restriction": "物品限制",
-		"weight_limit": "重量限制",
-		"length_limitation": "長度限制",
+		"article_restriction": "物品限製",
+		"weight_limit": "重量限製",
+		"length_limitation": "長度限製",
 		"more_rules": "更多規則"
 	},
 	"page_my_dingdan_details": {
@@ -772,14 +788,15 @@
 		"order_number": "訂單編號：",
 		"international_waybill_number": "國際運單號：",
 		"No_available": "暫無單號",
-		"copy_tracking_number": "復制單號",
+		"copy_tracking_number": "復製單號",
 		"payment_mode": "支付模式：",
 		"Payment_status": "支付狀態：",
 		"package_information": "包裹信息",
 		"parcel_no": "包裹單號[快遞單號]",
 		"logistics_transportation": "物流運輸",
 		"other": "其他",
-		"commodity_category": "商品品類",
+		"commodity_category": "包裹內容",
+		"chakanmingxi": "查看明細",
 		"long_w_h_w": "長/寬/高/重量",
 		"long_w_h_v": "長/寬/高/體積重",
 		"storage_time": "入庫時間",
@@ -793,6 +810,7 @@
 		"chargeable_weight": "計費重量",
 		"shipping_information": "寄運信息",
 		"Base_freight": "基礎運費",
+		"insure_free": "保險運費",
 		"packaging_service": "包裝服務",
 		"Other_expenses": "其他費用",
 		"Select_coupon": "選擇優惠券",
@@ -943,6 +961,7 @@
 	},
 	"page_my_querendb": {
 		"Confirm_packing": "確認打包",
+		"yugufree": "預估運費",
 		"home_delivery": "送貨上門",
 		"selective_pickup": "選擇自提",
 		"add_shipping_address": "添加收貨地址",
@@ -1008,11 +1027,11 @@
 		"Bank_name": "銀行名稱",
 		"placeholder5": "請輸入銀行名稱",
 		"weixin": "微信號",
-		"placeholder6": "請輸入妳的微信號",
+		"placeholder6": "請輸入你的微信號",
 		"Withdrawal_instructions": "提現須知",
 		"tixianzhi":"提現至",
 		"dianjiqiehuan":"點擊切換",
-		"zhu":"注",
+		"zhu":"註",
 		"xingming":"姓名",
 		"xingmingremark":"請輸入姓名",
 		"zhifubao":"支付寶賬號",
@@ -1024,12 +1043,12 @@
 	},
 	"page_my_tixianmx": {
 		"Withdrawal_details": "提現明細",
-		"tixian": "提現",
-		"moderated": "待審核",
-		"Be_approved": "審核通過",
-		"reject": "駁回",
-		"paid": "已打款",
-		"phone_number": "手機號",
+        "Withdraw_cash": "提現",
+        "moderated": "待審核",
+        "Be_approved": "審核通過",
+        "reject": "駁回",
+        "paid": "已打款",
+        "phone_number": "手機號",
         "bind_phone": "未綁定手機號",
         "Contribution_income": "貢獻收益",
         "Singular_payment": "支付單數：{num}單",
@@ -1067,9 +1086,9 @@
 	},
 	"page_my_xinshouxiadan": {
 		"Novice_order_process": "新手下單流程",
-		"first_text": "第壹步：復制倉庫地址",
-		"first_text_c": "復制倉庫地址後前往購物平臺下單，將倉庫地址粘貼到購物平臺收貨地址中。",
-		"one_click_copy": "壹鍵復制",
+		"first_text": "第一步：復製倉庫地址",
+		"first_text_c": "復製倉庫地址後前往購物平臺下單，將倉庫地址粘貼到購物平臺收貨地址中。",
+		"one_click_copy": "一鍵復製",
 		"second_text": "第二步：預報包裹",
 		"second_text_c": "下單後可以在購物平臺獲取到快遞單號，將快遞單號預報系統中",
 		"Addition_goods": "添加貨物",
@@ -1121,7 +1140,7 @@
 		"consignee": "收貨人",
 		"Contact_number": "聯系電話",
 		"Full_address": "詳細地址：",
-		"hint1": "· 未與賣家協商壹致情況下，請勿寄到付或平郵",
+		"hint1": "· 未與賣家協商一致情況下，請勿寄到付或平郵",
 		"hint2": "· 請填寫真實有效物流信息",
 		"Logistics_company": "物流公司：",
 		"p_logistics_company": "請選擇物流公司",
@@ -1143,6 +1162,7 @@
 		"Logistics_company": "物流公司：",
 		"Logistics_tracking_number": "物流單號：",
 		"Commodity_list": "商品列表",
+		"category": "商品分類",
 		"order_number": "訂單號：",
 		"Discount_members": "會員折扣價：",
 		"Applied_after_sale": "已申請售後",
@@ -1170,7 +1190,7 @@
 		"To_be_evaluated": "待評價",
 		"Commodity_list": "商品列表",
 		"Order_number": "訂單號：",
-		"pack_num": "共{ num }件",
+		"pack_num": "件數",
 		"total": "合計：",
 		"cancel": "取消",
 		"Apply_cancellation": "申請取消",
@@ -1191,7 +1211,7 @@
 		"My_group": "我的拼團",
 		"Head_center": "團長中心",
 		"apply_for_team_leader": "申請團長",
-		"hint": "暫無拼團訂單，去添加壹個吧",
+		"hint": "暫無拼團訂單，去添加一個吧",
 		"go_to_add": "去添加",
 		"recommend": "推薦",
 		"Group_size": "拼團人數：",
@@ -1208,7 +1228,9 @@
 		"Address_management": "地址管理",
 		"delete": "刪除",
 		"No_delivery_address": "暫無收貨地址",
-		"New_address": "新增地址"
+		"New_address": "新增地址",
+		"SetMoren":"設為默認",
+	    "Moren":"默認地址"
 	},
 	"page_pintuans_dizhi_add": {
 		"Add_address": "添加地址",
@@ -1226,9 +1248,9 @@
 		"State_province": "州/省",
 		"placeholder5": "請填寫州/省",
 		"city": "城市",
+		"region": "區",
+		"placeholder12": "請輸入區",
 		"placeholder6": "請輸入城市",
-		"region": "区",
-		"placeholder12": "请输入区",
 		"street": "街道",
 		"placeholder7": "請輸入街道",
 		"House_number": "門牌號",
@@ -1404,7 +1426,7 @@
 		"all": "全部",
 		"income": "收益",
 		"zhuanchu": "轉出",
-		"jinyigeyue": "近壹個月",
+		"jinyigeyue": "近一個月",
 		"laiyuandingdan": "來源訂單："
 	},
 	"page_my_order": {
@@ -1488,54 +1510,61 @@
 	"placeholder4":"請輸入郵箱",
 	"wechat":"微信號",
 	"wechatplaceholder":"請輸入微信號",
-	"identification_cardplaceholder":"請輸入内容",
+	"identification_cardplaceholder":"請輸入內容",
 	"birthday":"生日"
   },
   "checkout":{
-      "title": "立即購買",  
-      "genghuan": "更换",  
-      "dizhi": "請選擇配送地址",  
-      "xaunze": "去選擇",  
-      "zitidian": "請選擇自提點",  
-      "lianxiren": "聯繫人",  
-      "lianxirentxt": "請填寫聯繫人姓名",  
-      "lianxidianhua": "聯繫電話",  
-      "lianxidianhuatxt": "請填寫聯繫電話",  
-      "jiage": "價格",  
-      "yunfei": "運費",  
-      "heji": "件商品，合計",  
-      "gong": "共",  
-      "dingdan": "訂單總金額",  
-      "fuwufei": "服務費",  
-      "zhifu": "支付方式",  
-      "xuantian": "選填：買家留言（50字以內）",  
-      "shifukuan": "實付款",  
-      "tijiao": "提交訂單",  
-      "goumaichenggong": "購買成功",  
-      "chenggong": "成功",  
-      "weimendian": "請選擇自提的門店",  
-      "weilianxiren": "請填寫自提聯繫人",  
-      "weilianxidianhua": "請填寫自提聯繫電話",  
-      "weilianxidianhuas": "請輸入正確的聯繫電話",  
-      "guanbi": "關閉",  
-      "shuoming": "說明",  
-      "zhekou": "會員折扣價"  
+      "title":"立即購買",
+      "genghuan":"更換",
+      "dizhi":"請選擇配送地址",
+      "xaunze":"去選擇",
+      "zitidian":"請選擇自提點",
+      "lianxiren":"聯系人",
+      "lianxirentxt":"請填寫聯系人姓名",
+      "lianxidianhua":"聯系電話",
+      "lianxidianhuatxt":"請填寫聯系電話",
+      "jiage":"價格",
+      "yunfei":"運費",
+      "heji":"件商品，合計",
+      "gong":"共",
+      "dingdan":"訂單總金額",
+      "fuwufei":"服務費",
+      "zhifu":"支付方式",
+      "xuantian":"選填：買家留言（50字以內）",
+      "shifukuan":"實付款",
+      "tijiao":"提交訂單",
+      "goumaichenggong":"購買成功",
+      "chenggong":"成功",
+      "weimendian":"請選擇自提的門店",
+      "weilianxiren":"請填寫自提聯系人",
+      "weilianxidianhua":"請填寫自提聯系電話",
+      "weilianxidianhuas":"請輸入正確的聯系電話",
+      "guanbi":"關閉",
+      "shuoming":"說明",
+      "zhekou":"會員折扣價"
     },
     "pintuandingdan":{
-      "title": "拼團訂單",  
-      "fqzhifu": "支付方式",  
-      "fqyouhui": "優惠券",  
-      "fqkeyong": "張優惠券可用",  
-      "fqshifukuan": "實付款",  
-      "fqtijiao": "提交訂單",  
-      "fqxuanzeyouhuiq": "選擇優惠券",  
-      "fqman": "滿",  
-      "fqyuankeyong": "元可用",  
-      "fqzhe": "折",  
-      "fqyouxiaoqi": "有效期",  
-      "fqbushiyong": "不使用優惠券",  
-      "fqzanwu": "無優惠券可用",  
-      "fqliuyan": "選填：買家留言（50字以內）" 
+        "title":"拼團訂單",
+        "fqzhifu":"支付方式",
+        "fqyouhui":"優惠券",
+        "fqkeyong":"張優惠券可用",
+        "fqshifukuan":"實付款",
+        "fqtijiao":"提交訂單",
+        "fqxuanzeyouhuiq":"選擇優惠券",
+    	"fqman":"滿",
+    	"fqyuankeyong":"元可用",
+    	"fqzhe":"折",
+    	"fqyouxaioqi":"有效期",
+    	"fqbushiyong":"不使用優惠券",
+    	"fqzanwu":"無優惠券可用",
+    	"pjquanbu":"全部",
+	    "pjhao":"好評",
+	    "pjzhong":"中評",
+	    "pjcha":"差評",
+	    "pjjl":"親，暫時沒有記錄哦",
+	    "sctp":"上傳圖片",
+	    "qrtj":"確認提交",
+	    "fqliuyan":"選填：買家留言（50字以內）"
     },
     "gouwuches":{
         "title":"購物車",
@@ -1549,7 +1578,7 @@
     	"qugouwu":"去購物",
     	"weishangpin":"您還沒有選擇商品",
     	"tishi":"提示",
-    	"weiyichu":"您確定要移除選擇的商品嗎？"
+    	"weiyichu":"您確定要移除選擇的商品嗎?"
     },
     "shangpins":{
     	"title":"商品詳情",
@@ -1566,12 +1595,15 @@
     	"tiao":"條",
     	"chakan":"查看更多",
     	"miaoshu":"商品描述",
-    	"shuju":"亲,此处暂无详情数据",
+    	"shuju":"親,此處暫無詳情數據",
     	"baocun":"保存圖片",
     	"denglu":"請先去登錄",
     	"weigoumai":"請輸入購買數量",
     	"weigoumais":"購買數量不能為0",
     	"baocuncg":"保存成功",
+    	"sousuo":"搜索",
+	    "zuijin":"最近搜索",
+	    "sousuotxt":"請輸入您搜索的商品",
     	"yunxu":"請允許訪問相冊後重試"
     }
 }
