--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -163,6 +163,11 @@
 		"stocked": "已入库",
 		"yessend": "已发货",
 		"order_sn":"所属订单",
+		"tobodabao":"待打包",
+		"yijingshouhuo":"收货签收",
+		"daizhifu":"待支付",
+		"yifahuo":"已发货",
+		"daifahuo":"待发货",
 		"problem_piece": "问题件",
 		"please_enter_the_parcel_number": "请输入包裹单号",
 		"check_the_details": "查看详情",
