--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -134,6 +134,7 @@
 		"waitreceivedmoney": "代收款",
 	    "waitreceivedmoney_placeholder": "请输入代收款",
 		"goodsinformation": "物品信息",
+		"goodsinformationpol": "请输入物品信息",
 		"please_enter_item_value": "请输入物品价值",
 		"commodity_remarks": "商品备注",
 		"photo_upload": "拍照上传",
