--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -22,7 +22,7 @@
 	  "please_enter_goodsname":"請輸入物品名稱"
     },
 	"page_index": {
-	    "guanzhu":"关注",
+	    "guanzhu":"關注",
 		"bestRoute": "最佳路線",
 		"allRoute":"所有路線",
 		"aging": "時效",
@@ -134,6 +134,7 @@
 		"waitreceivedmoney": "代收款",
 	    "waitreceivedmoney_placeholder": "請輸入代收款",
 		"goodsinformation": "物品信息",
+		"goodsinformationpol": "請輸入物品信息",
 		"please_enter_item_value": "請輸入物品價值",
 		"commodity_remarks": "商品備註",
 		"photo_upload": "拍照上傳",
