--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -1622,5 +1622,74 @@
 	    "zuijin":"最近搜索",
 	    "sousuotxt":"请输入您搜索的商品",
     	"yunxu":"请允许访问相册后重试"
+    },
+    "login":{
+       "登录":"登录",
+       "请输入手机号":"请输入手机号",
+       "请输入密码":"请输入密码",
+       "我已同意":"我已同意", 
+       "用户隐私协议":"用户隐私协议",
+       "请选勾选隐私协议":"请选勾选隐私协议",
+       "忘记密码":"忘记密码",
+       "快速注册":"快速注册",
+       "微信登录":"微信登录",
+       "我知道了":"我知道了",
+       "绑定手机号":"绑定手机号",
+       "请输入验证码":"请输入验证码",
+       "获取验证码":"获取验证码",
+       "重新发送":"重新发送",
+       "秒":"秒",
+       "取消":"取消",
+       "绑定":"绑定",
+       "您没有登录，将无法使用部分功能":"您没有登录，将无法使用部分功能",
+       "网络似乎开小差了":"网络似乎开小差了"
+    },
+    "register":{
+       "注册":"注册",
+       "请输入邮箱":"请输入邮箱",
+       "请输入邮箱验证码":"请输入确认密码",
+       "请输入确认密码":"请输入确认密码", 
+       "已有账号,立即登录":"已有账号,立即登录",
+       "两次密码不一致":"两次密码不一致",
+       "邮箱格式错误":"邮箱格式错误"
+    },
+    "password":{
+       "请输入新密码":"请输入新密码",
+       "找回密码":"找回密码",
+       "请确认密码":"请确认密码",
+       "提交":"提交",
+       "中国":"中国"
+    },
+    "pageindex":{
+       "语言切换":"语言切换"
+    },
+    "myorder":{
+       "全部":"全部",
+       "待查验":"待查验",
+       "待付款":"待付款",
+       "待发货":"待发货",
+       "已发货":"已发货",
+       "已完成":"已完成",
+       "复制成功":"复制成功"
+    },
+    "myorderdetail":{
+       "待查验":"待查验",
+       "您的包裹正在等待查验":"您的包裹正在等待查验",
+       "待付款":"待付款",
+       "您有一笔订单未支付":"您有一笔订单未支付",
+       "待发货":"待发货",
+       "您的订单待发货":"您的订单待发货",
+       "拣货中":"拣货中",
+       "分拣员正在飞速拣货中":"分拣员正在飞速拣货中",
+       "已打包":"已打包",
+       "您的包裹已打包":"您的包裹已打包",
+       "已发货":"已发货",
+       "您的包裹已发货":"您的包裹已发货",
+       "已到货":"已到货",
+       "订单已到货":"订单已到货",
+       "已完成":"已完成",
+       "您的包裹已送达，订单已完成":"您的包裹已送达，订单已完成",
+       "问题件":"问题件",
+       "包裹为问题件，请等待处理":"包裹为问题件，请等待处理"
     }
 }
