--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -72,7 +72,7 @@
 		"balance_recharge": "余額充值",
 		"not_logged_in": "未登錄",
 		"please_log_in_first": "請先登錄",
-		"my_balance": "我的余額",
+		"my_balance": "我的餘額",
 		"station_message": "站內信",
 		"coupon": "優惠券",
 		"integral": "積分",
@@ -1622,5 +1622,74 @@
 	    "zuijin":"最近搜索",
 	    "sousuotxt":"請輸入您搜索的商品",
     	"yunxu":"請允許訪問相冊後重試"
+    },
+        "login":{
+       "登录":"登录",
+       "请输入手机号":"請輸入手機號",
+       "请输入密码":"請輸入密碼",
+       "我已同意":"我已同意", 
+       "用户隐私协议":"用戶隱私協議",
+       "请先勾选隐私协议":"請選勾選隱私協議",
+       "忘记密码":"忘記密碼",
+       "快速注册":"快速註冊",
+       "微信登录":"微信登錄",
+       "我知道了":"我知道了",
+       "绑定手机号":"綁定手機號",
+       "请输入验证码":"請輸入驗證碼",
+       "获取验证码":"獲取驗證碼",
+       "重新发送":"重新發送",
+       "秒":"秒",
+       "取消":"取消",
+       "绑定":"綁定",
+       "您没有登录，将无法使用部分功能":"您沒有登錄，將無法使用部分功能",
+       "网络似乎开小差了":"網絡似乎開小差了"
+    },
+    "register":{
+       "注册":"註冊",
+       "请输入邮箱":"請輸入郵箱",
+       "请输入邮箱验证码":"請輸入確認密碼",
+       "请输入确认密码":"請輸入確認密碼", 
+       "已有账号,立即登录":"已有賬號,立即登錄",
+       "两次密码不一致":"兩次密碼不一致",
+       "邮箱格式错误":"郵箱格式錯誤"
+    }, 
+    "password":{
+       "请输入新密码":"請輸入新密碼",
+       "找回密码":"找回密碼",
+       "请确认密码":"請確認密碼",
+       "提交":"提交",
+       "中国":"中國"
+    },
+    "pageindex":{
+       "语言切换":"語言切換"
+    },
+    "myorder":{
+       "全部":"全部",
+       "待查验":"待查驗",
+       "待付款":"待付款",
+       "待发货":"待發貨",
+       "已发货":"已發貨",
+       "已完成":"已完成",
+       "复制成功":"複製成功"
+    },
+    "myorderdetail":{
+       "待查验":"待查驗",
+       "您的包裹正在等待查验":"您的包裹正在等待查驗",
+       "待付款":"待付款",
+       "您有一笔订单未支付":"您有一筆訂單未支付",
+       "待发货":"待發貨",
+       "您的订单待发货":"您的訂單待發貨",
+       "拣货中":"拣货中",
+       "分拣员正在飞速拣货中":"分揀員正在飛速揀貨中",
+       "已打包":"已打包",
+       "您的包裹已打包":"您的包裹已打包",
+       "已发货":"已發貨",
+       "您的包裹已发货":"您的包裹已發貨",
+       "已到货":"已到貨",
+       "订单已到货":"訂單已到貨",
+       "已完成":"已完成",
+       "您的订单已完成":"您的訂單已完成",
+       "问题件":"問題件",
+       "包裹为问题件，请等待处理":"包裹為問題件，請等待處理"
     }
 }
