新增仓管端功能

--- a/web/lang/10001/zhHans.json
+++ b/web/lang/10001/zhHans.json
@@ -1670,7 +1670,9 @@
        "待发货":"待发货",
        "已发货":"已发货",
        "已完成":"已完成",
-       "复制成功":"复制成功"
+       "复制成功":"复制成功",
+       "到货时间":"到货时间",
+       "发货时间":"发货时间"
     },
     "myorderdetail":{
        "待查验":"待查验",
