--- a/web/lang/10001/zhHant.json
+++ b/web/lang/10001/zhHant.json
@@ -1670,7 +1670,9 @@
        "待发货":"待發貨",
        "已发货":"已發貨",
        "已完成":"已完成",
-       "复制成功":"複製成功"
+       "复制成功":"複製成功",
+       "到货时间":"到貨時間",
+       "发货时间":"發貨時間"
     },
     "myorderdetail":{
        "待查验":"待查驗",
